--- a/views/partials/chatini.hbs
+++ b/views/partials/chatini.hbs
@@ -14,6 +14,46 @@
 							placeholder="Enter username..."
 							required
 						/>
+						<label for="nombre">Nombre</label>
+						<input
+							type="string"
+							name="nombre"
+							id="nombre"
+							placeholder="Enter name..."
+							required
+						/>
+						<label for="nombre">Apellido</label>
+						<input
+							type="string"
+							name="apellido"
+							id="apellido"
+							placeholder="Enter last name..."
+							required
+						/>
+						<label for="alias">Alias</label>
+						<input
+							type="string"
+							name="alias"
+							id="alias"
+							placeholder="Enter alias..."
+							required
+						/>
+						<label for="edad">Edad</label>
+						<input
+							type="number"
+							name="edad"
+							id="edad"
+							placeholder="Enter age..."
+							required
+						/>
+						<label for="avatar">Avatar</label>
+						<input
+							type="string"
+							name="avatar"
+							id="avatar"
+							placeholder="Enter avatar..."
+							required
+						/>
 					</div>
 					<div class="form-control">
 						<label for="room">Room</label>
