--- a/views/partials/chatini.hbs
+++ b/views/partials/chatini.hbs
@@ -1,4 +1,4 @@
-{{#if mostrarLoggin}}
+{{#if mostrarChatini}}
 		<div class="join-container">
 			<header class="join-header">
 				<h1><i class="fas fa-smile"></i> SantiChat</h1>
