authentificacion con facebook

--- a/views/partials/login.hbs
+++ b/views/partials/login.hbs
@@ -1,11 +1,3 @@
 {{#if mostrarLogin}}
-    <form method="POST">
-        <label for="username"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="username" required>
-
-        <label for="password"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="password" required>
-
-        <button type="submit" class="btn">Log In</button>
-    </form>
+    <button type="submit" class="btn"><a href="./auth/facebook">Login with Facebook</a></button>
 {{/if}}
