--- a/views/partials/register.hbs
+++ b/views/partials/register.hbs
@@ -16,7 +16,10 @@
         <input type="text" placeholder="Enter Last Name" name="lastName" required>
 
         <label for="firstName"><b>First Name </b></label>
-        <input type="text" placeholder="Enter First Name " name="firstName" required>
+        <input type="text" placeholder="Enter First Name" name="firstName" required>
+
+        <label for="phoneNumber"><b>Phone Number </b></label>
+        <input type="text" placeholder="Enter Phone Number" name="phoneNumber" required>
 
         <button type="submit" class="btn">Register</button>
     </form>
